# winter-school-2024

./: README.md  ganymede_data_info_2024-GMAP-winter-school.md
crs/: README.md  crs_data_info_2024-GMAP-winter-school.md  pyproject.toml  requirements.txt  requirements.yml
crs/notebooks/: 0_crs_intro.ipynb  1_venus.ipynb  2_icy_satellites.ipynb  3_small_bodies.ipynb  4_utilities-crs.ipynb
ganymede/: README.md  ganymede_data_info_2024-GMAP-winter-school.md
mappy-opencratertool/: README.md  mappy-opencratertool_data_info_2024-GMAP-winter-school.md
qgis/: README.md  qgis-troubleshooting.md
seminars/: README.md
small-bodies/: README.md
venus/: README.md  venus_data_info_2024-GMAP-winter-school.md
vesta/: README.md  vesta_data_info_2024-GMAP-winter-school.md
